# WatMoetIkBieden

./: .gitignore  CLAUDE.md  README.md  TODO.md  app.py  pyproject.toml  setup.ps1
scripts/: buurt_floor_area.py  fetch_address.py  fetch_cbs_longitudinal.py  plot_woz_longitudinal.py  validate_estimator.py  validate_two_variable.py
src/watmoetikbieden/: __init__.py  bid_range.py  charts.py  cli.py  fetcher.py  market_indicators.py  models.py  regional_relatives.py  woz_estimator.py
src/watmoetikbieden/sources/: __init__.py  bag_locatie.py  bag_wfs.py  brk.py  building_permits.py  building_stats.py  cbs_demographics.py  cbs_income.py  cbs_national_transactions.py  cbs_woz_longitudinal.py  dnb_mortgage_rates.py  duo_schools.py  ep_online.py  kwb_bulk.py  leefbaarometer.py  migration.py  nearby_schools.py  pbk_corop.py  woz.py
