[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watmoetikbieden"
version = "0.1.0"
description = "Dutch housing market bid price estimator – free public data only"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "anyio>=4.0",
    "numpy>=1.26",
    "plotext>=5.0",
    "pandas>=2.0",
    "geopandas>=1.0",
]

[project.optional-dependencies]
dev = [
    "geopandas>=0.14",
]

[project.scripts]
fetch-address = "watmoetikbieden.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watmoetikbieden"]
